Final commit, after all the changes.

--- a/DigiNotes/src/main/resources/templates/add_notes.html
+++ b/DigiNotes/src/main/resources/templates/add_notes.html
@@ -15,14 +15,19 @@
 						<div class = "card-header text-center">
 							<p class = "fs-4">Add Notes</p>
 							
+							<th:block th:if="${session.msg}">
+								<p class = "text-center text-success fs-4">[[${session.msg}]]</p>
+								<th:block th:text="${@userServiceImpl.removeSessionMessage()}"></th:block>
+							</th:block>
+							
 						</div>
 						<div class ="card-body">
 						
-							<form action="#" th:action="@{/addNotes}" th:object="${digiNotes}" method="POST">
+							<form action="saveNotes" method="POST">
 							
 							  <div class="mb-3">
 							    <label for="exampleInputTitle" class="form-label">Title</label>
-							    <input type="title" class="form-control" id="exampleInputTitle" placeholder="Enter Title" name = "email">
+							    <input type="title" class="form-control" id="exampleInputTitle" placeholder="Enter Title" name = "title">
 							  </div>
 							  
 							  <div class="mb-3">
@@ -30,7 +35,7 @@
 							    <textarea rows="6" cols="" class="form-control" placeholder="Write your description here." name = "description"></textarea>
 							  </div>
 							  
-							  <button type="submit" class="btn btn-primary">Save</button>							  
+							  <button class="btn btn-primary">Save</button>							  
 							</form>
 						</div>
 						<!--<div class="card-footer text-center">
