--- a/DigiNotes/src/main/resources/templates/login.html
+++ b/DigiNotes/src/main/resources/templates/login.html
@@ -15,23 +15,32 @@
 						<div class = "card-header text-center">
 							<p class = "fs-4">Login</p>
 							
+							<th:block th:if="${param.error}">
+								<p class="text-center text-danger fs-5">[[${session.SPRING_SECURITY_LAST_EXCEPTION.message}]]</p>
+							</th:block>
+							
+							<th:block th:if="${param.logout}">
+								<p class="text-center text-success fs-5">Logout sucessfully</p>
+							</th:block>
+							
 						</div>
 						<div class ="card-body">
 						
-							<form action="#" th:action="@{/login}" th:object="${digiNotes}" method="POST">
-							
-							  <div class="mb-3">
-							    <label for="exampleInputEmail1" class="form-label">Email address</label>
-							    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="name@example.com" name = "email">
-							  </div>
-							  
-							  <div class="mb-3">
-							    <label for="exampleInputPassword1" class="form-label">Password</label>
-							    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="pwd@123" name = "password">
-							  </div>
-							  
-							  <button type="submit" class="btn btn-primary">Login</button>							  
+							<form action="userLogin" method="post">
+
+								<div class="mb-3">
+									<label>Enter Email</label> <input type="email" name="username"
+										class="form-control">
+								</div>
+
+								<div class="mb-3">
+									<label>Enter Password</label> <input type="password"
+										name="password" class="form-control">
+								</div>
+
+								<button class="btn btn-primary col-md-12">Login</button>
 							</form>
+							
 						</div>
 						<div class="card-footer text-center">
 							<p class="fs-6">
