--- a/DigiNotes/src/main/resources/templates/register.html
+++ b/DigiNotes/src/main/resources/templates/register.html
@@ -15,10 +15,15 @@
 						<div class = "card-header text-center">
 							<p class = "fs-4">Register Yourself</p>
 							
+							<th:block th:if="${session.msg}">
+								<p class = "text-center text-success fs-4">[[${session.msg}]]</p>
+								<th:block th:text="${@userServiceImpl.removeSessionMessage()}"></th:block>
+							</th:block>
+							
 						</div>
 						<div class ="card-body">
 						
-							<form action="#" th:action="@{/register}" th:object="${digiNotes}" method="POST">
+							<form action="#" th:action="@{/saveUser}" th:object="${user}" method="POST">
 							
 							  <div class="mb-3">
 							    <label for="exampleInputEmail1" class="form-label">User Name</label>
@@ -48,7 +53,7 @@
 							  
 							  <div class="mb-3">
 							    <label for="exampleInputEmail1" class="form-label">Address</label>
-							    <input type="text" class="form-control" id="address" aria-describedby="emailHelp" placeholder="Bangalore" name = "location">
+							    <input type="text" class="form-control" id="address" aria-describedby="emailHelp" placeholder="Bangalore" name = "address">
 							  </div>
 							  
 							  <div class="mb-3">
