login issue fixed

--- a/DigiNotes/src/main/resources/templates/register.html
+++ b/DigiNotes/src/main/resources/templates/register.html
@@ -77,7 +77,7 @@
 						</div>
 						<div class="card-footer text-center">
 							<p class="fs-6">
-								Already have an account? <a href="login" class="text-decoration-none">Login</a>
+								Already have an account? <a href="signin" class="text-decoration-none">Login</a>
 							</p>
 						</div>
 					</div>
